# backend/handler/item.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	repository "github.com/wheatandcat/Peperomia/backend/repository"
 )
 
@@ -13,6 +14,139 @@ type SyncItemsRequest struct {
 	Items       []repository.ItemRecord       `json:"items" binding:"required"`
 	ItemDetails []repository.ItemDetailRecord `json:"itemDetails" binding:"required"`
 	Calendars   []repository.CalendarRecord   `json:"calendars"`
+}
+
+// CreateItemRequest is CreateItem request
+type CreateItemRequest struct {
+	Item CreateItem `json:"item" binding:"required"`
+}
+
+// CreateItem is CreateItem request
+type CreateItem struct {
+	Title string `json:"title" binding:"required"`
+	Kind  string `json:"kind" binding:"required"`
+}
+
+// UpdateItemRequest is UpdateItem request
+type UpdateItemRequest struct {
+	Item UpdateItem `json:"item" binding:"required"`
+}
+
+// UpdateItem is UpdateItem request
+type UpdateItem struct {
+	ID    string `json:"id" binding:"required"`
+	Title string `json:"title" binding:"required"`
+	Kind  string `json:"kind" binding:"required"`
+}
+
+// DeleteItemRequest is DeleteItem request
+type DeleteItemRequest struct {
+	Item DeleteItem `json:"item" binding:"required"`
+}
+
+// DeleteItem is DeleteItem request
+type DeleteItem struct {
+	ID string `json:"id" binding:"required"`
+}
+
+// CreateItem 予定を作成する
+func (h *Handler) CreateItem(gc *gin.Context) {
+	ctx := context.Background()
+	req := &CreateItemRequest{}
+	if err := gc.Bind(req); err != nil {
+		gc.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	uid, err := GetSelfUID(gc)
+	if err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	ir := repository.NewItemRepository()
+
+	u, err := uuid.NewRandom()
+	if err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	item := repository.ItemRecord{
+		ID:    u.String(),
+		Title: req.Item.Title,
+		Kind:  req.Item.Kind,
+		UID:   uid,
+	}
+
+	if err := ir.Create(ctx, h.FirestoreClient, item); err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	gc.JSON(http.StatusCreated, item)
+}
+
+// UpdateItem 予定を更新する
+func (h *Handler) UpdateItem(gc *gin.Context) {
+	ctx := context.Background()
+	req := &UpdateItemRequest{}
+	if err := gc.Bind(req); err != nil {
+		gc.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	uid, err := GetSelfUID(gc)
+	if err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	ir := repository.NewItemRepository()
+
+	item := repository.ItemRecord{
+		ID:    req.Item.ID,
+		Title: req.Item.Title,
+		Kind:  req.Item.Kind,
+		UID:   uid,
+	}
+
+	if err := ir.Update(ctx, h.FirestoreClient, item); err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	gc.JSON(http.StatusOK, nil)
+}
+
+// DeleteItem 予定を削除する
+func (h *Handler) DeleteItem(gc *gin.Context) {
+	ctx := context.Background()
+	req := &DeleteItemRequest{}
+	if err := gc.Bind(req); err != nil {
+		gc.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	uid, err := GetSelfUID(gc)
+	if err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	ir := repository.NewItemRepository()
+
+	item := repository.ItemRecord{
+		ID:  req.Item.ID,
+		UID: uid,
+	}
+
+	if err := ir.Delete(ctx, h.FirestoreClient, item); err != nil {
+		NewErrorResponse(err).Render(gc)
+		return
+	}
+
+	gc.JSON(http.StatusOK, nil)
 }
 
 // SyncItems アイテムを同期させる
@@ -58,7 +192,7 @@ func (h *Handler) SyncItems(gc *gin.Context) {
 
 	for _, itemDetail := range req.ItemDetails {
 		itemDetail.UID = uid
-		if err := idr.CreateItemDetail(ctx, h.FirestoreClient, itemDetail); err != nil {
+		if err := idr.Create(ctx, h.FirestoreClient, itemDetail); err != nil {
 			NewErrorResponse(err).Render(gc)
 			return
 		}
@@ -66,7 +200,7 @@ func (h *Handler) SyncItems(gc *gin.Context) {
 
 	for _, calendar := range req.Calendars {
 		calendar.UID = uid
-		if err := cr.CreateCalendar(ctx, h.FirestoreClient, calendar); err != nil {
+		if err := cr.Create(ctx, h.FirestoreClient, calendar); err != nil {
 			NewErrorResponse(err).Render(gc)
 			return
 		}
